--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1193,81 +1193,6 @@ a:active {
   text-decoration: none;
 }
 
-input:not(.z-input) {
-  height: 2.5rem;
-  font-family: inherit;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.2;
-  color: #586872;
-  background-color: #FFFFFF;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 0.0625rem;
-  -webkit-border-radius: 0.0625rem;
-  -moz-border-radius: 0.0625rem;
-  padding: 0 0.625rem 0 0.625rem;
-  vertical-align: middle;
-}
-input:not(.z-input)::placeholder {
-  color: #ACB4BF;
-}
-input:not(.z-input):not(:disabled):focus, input:not(.z-input):not(:read-only):focus {
-  outline: 0;
-  border: 0.0625rem solid #0098FF;
-}
-input:not(.z-input):not(:disabled):hover, input:not(.z-input):not(:read-only):hover {
-  outline: 0;
-  border: 0.0625rem solid #0098FF;
-  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-}
-input:not(.z-input):disabled {
-  color: #ACB4BF;
-  background-color: #F7F8F9;
-  border-color: #EBEBEB;
-  pointer-events: none;
-  cursor: default;
-}
-input:not(.z-input):read-only {
-  background-color: #F7F8F9;
-  border-color: #EBEBEB;
-  pointer-events: none;
-  cursor: default;
-}
-input:not(.z-input).icon {
-  padding-right: 2.5rem;
-}
-input:not(.z-input).error {
-  color: #ff405a !important;
-  border: 0.0625rem solid #ff405a !important;
-}
-input:not(.z-input)[type=range] {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 0.0625rem;
-  background-color: #EBEBEB;
-  outline: 0;
-}
-input:not(.z-input)[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 1.125rem;
-  height: 1.125rem;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 50%;
-  background: #FFFFFF;
-  cursor: pointer;
-}
-input:not(.z-input)[type=range]::-moz-range-thumb {
-  width: 1.125rem;
-  height: 1.125rem;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 50%;
-  background: #FFFFFF;
-  cursor: pointer;
-}
-
 textarea:not(.z-textarea) {
   font-family: inherit;
   font-size: 0.875rem;
@@ -1930,6 +1855,81 @@ label {
 }
 .z-textarea.success {
   border: 0.0625rem solid #76BD26;
+}
+
+.z-slider .z-range {
+  height: 0.375rem;
+  border-radius: 0.25rem;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+}
+.z-slider .z-range_progress {
+  width: 75%;
+  height: 0.25rem;
+  background-color: #EEEEEE;
+}
+.z-slider > input[type=range] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 0.25rem;
+  background-color: #EBEBEB;
+  outline: 0;
+}
+.z-slider > input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1.125rem;
+  height: 1.125rem;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 50%;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 0.125rem 0 #8B9094;
+  -moz-box-shadow: 0 0 0.125rem 0 #8B9094;
+  box-shadow: 0 0 0.125rem 0 #8B9094;
+}
+.z-slider > input[type=range]::-webkit-slider-thumb:hover {
+  border-color: #64BBF6;
+  background-color: #E3F5FC;
+}
+.z-slider > input[type=range]::-webkit-slider-thumb:focus {
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-slider > input[type=range]::-webkit-slider-thumb:active {
+  border-color: #339AF0;
+  background-color: #ADE6FD;
+}
+.z-slider > input[type=range]::-webkit-slider-thumb:disabled {
+  border-color: #CFD5D9;
+  background-color: #EEEEEE;
+}
+.z-slider > input[type=range]::-moz-range-thumb {
+  width: 1.125rem;
+  height: 1.125rem;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 50%;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 0.125rem 0 #8B9094;
+  -moz-box-shadow: 0 0 0.125rem 0 #8B9094;
+  box-shadow: 0 0 0.125rem 0 #8B9094;
+}
+.z-slider > input[type=range]::-moz-range-thumb:hover {
+  border-color: #64BBF6;
+  background-color: #E3F5FC;
+}
+.z-slider > input[type=range]::-moz-range-thumb:focus {
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-slider > input[type=range]::-moz-range-thumb:active {
+  border-color: #339AF0;
+  background-color: #ADE6FD;
 }
 
 .switch {
@@ -5515,25 +5515,15 @@ body.modal-active {
 .property .input-button .z-button {
   height: 2.5rem;
 }
-.property .slider .range {
+.property .z-slider .z-range {
   width: 75%;
-  height: 0.375rem;
-  border-radius: 0.25rem;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
 }
-.property .slider .range:not(:disabled):focus, .property .slider .range:not(:read-only):focus {
-  background: #0098FF;
-}
-.property .slider .range:not(:disabled):hover, .property .slider .range:not(:read-only):hover {
-  background: #0098FF;
-}
-.property .slider .z-input {
+.property .z-slider .z-input {
   width: 23%;
   text-align: center;
   margin-left: 2%;
 }
-.property .slider .z-input:read-only {
+.property .z-slider .z-input:read-only {
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
