SELECT BOX 디자인 적용

--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -174,7 +174,7 @@
                     const selectPatternDateValue = document.getElementById('selectPatternDateValue');
                     for (let i = 0; i < selectPatternDateValue.length; i++) {
                         if (selectPatternDateValue[i].textContent === responseJson.patternValue) {
-                            document.querySelector('.designed-select').textContent = responseJson.patternValue;
+                            document.querySelector('.z-select-box').textContent = responseJson.patternValue;
                             selectPatternDateValue[i].selected = true;
                         }
                     }
@@ -357,7 +357,7 @@
                 document.getElementById('txtPatternValue').addEventListener('keydown', onlyNumber);
                 document.getElementById('txtPatternValue').addEventListener('keyup', aliceJs.removeChar);
             } else {
-                document.querySelector('.designed-select').textContent = document.querySelector('.designed-options').firstElementChild.textContent;
+                document.querySelector('.z-select-box').textContent = document.querySelector('.z-select-options').firstElementChild.textContent;
                 document.getElementById('selectPatternDateValue')[0].selected = true;
                 document.getElementById('type-input-pattern').style.display = 'none';
                 document.getElementById('type-select-pattern').style.display = '';
