--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -69,6 +69,7 @@
         // 탭 정보들 조회하여 셋팅.
         window.onload = function() {
             tabInit();
+            aliceJs.initDesignedSelectTag();
         }
 
         /**
