--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -12,6 +12,7 @@
     <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/lib/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zSelectBox.js}"></script>
     <script th:src="@{/assets/js/lib/zModal.js}"></script>
     <script th:src="@{/assets/js/lib/zAlert.js}"></script>
     <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
