#10847 설정 파일 작성
- ciView.html 파일에서 태그 정보가 오류가 발생됨.
  예전에 박현철 차장님이 수정 했는데 (ci.tags -> ci.ciTags) 원본이 된 상태. 따라서 해당 부분만 원복시킴

--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -67,7 +67,7 @@
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
                 <input type="text" id="tags" name="ciDetailTags" class="z-input col-pct-12 inherit"
-                       th:value="|${ciData.tags}|" readonly/>
+                       th:value="|${ciData.ciTags}|" readonly/>
             </div>
             <!-- 세부속성 -->
             <div class="flex-column view-row">
