--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -39,7 +39,7 @@
                 <td style="width: 25%;" class="align-left">
                     <div class="tag-group align-middle">
                         <input type="text" name="ciListTags" class="z-input tag align-center text-ellipsis"
-                               th:value="${ciData.tags}" readonly/>
+                               th:value="${ciData.ciTags}" readonly/>
                     </div>
                 </td>
             </tr>
