--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1657,25 +1657,19 @@ label {
  * @author wdj
  * @version 1.0
  */
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-body .z-print {
+.z-print {
   margin: 1cm auto;
 }
-body .z-print .z-print-main-header {
+.z-print .z-print-main-header {
   line-height: 1.2;
   margin: 0 0 10mm 0;
 }
-body .z-print .z-form {
+.z-print .z-form {
   box-shadow: none;
 }
-body .z-print .z-form input, body .z-print .z-form textarea, body .z-print .z-form button, body .z-print .z-form select,
-body .z-print .z-form .dropzone, body .z-print .z-form .ql-toolbar,
-body .z-print .z-form label.radio, body .z-print .z-form label.checkbox {
+.z-print .z-form input, .z-print .z-form textarea, .z-print .z-form button, .z-print .z-form select,
+.z-print .z-form .dropzone, .z-print .z-form .ql-toolbar,
+.z-print .z-form label.radio, .z-print .z-form label.checkbox {
   pointer-events: none;
 }
 
