--- a/src/main/resources/public/scss/portal/_variables.scss
+++ b/src/main/resources/public/scss/portal/_variables.scss
@@ -1,3 +1,21 @@
+//////////////////////////// button ///////////////////////////
+$button-themes-portal: (
+  'google': (
+    'default': ('font': $gray800, 'background': $white, 'border': $gray300),
+    'hover': ('font' : $gray800, 'background': $neutral200, 'border': $gray300),
+    'focus': ('font': $gray800, 'background': $white, 'border': $blue600, 'shadow': 0 0 0.125rem $blue600),
+    'active': ('font': $gray800, 'background': $neutral300, 'border': $gray400),
+    'disabled': ('font': $gray400, 'background': $neutral200, 'border': $neutral200)
+  ),
+  'kakao': (
+    'default': ('font': $gray800, 'background': $yellow500, 'border': $yellow600),
+    'hover': ('font' : $gray800, 'background': $yellow400, 'border': $yellow600),
+    'focus': ('font': $gray800, 'background': $yellow500, 'border': $blue600, 'shadow': 0 0 0.125rem $blue600),
+    'active': ('font': $gray800, 'background': $yellow600, 'border': $yellow800),
+    'disabled': ('font': $gray400, 'background': $neutral200, 'border': $neutral200)
+  )
+);
+
 //////////////////////////// layout ////////////////////////////
 // header
 $layout-header-height:                       3.125rem; // 50px
