--- a/src/main/resources/public/scss/template/_buttons.scss
+++ b/src/main/resources/public/scss/template/_buttons.scss
@@ -47,12 +47,12 @@
   }
 
   // 테마별 버튼
-  @each $theme, $value in $button-themes-colors {
+  @each $theme, $value in $button-themes {
     &.#{$theme} {
       color: map-get($value, 'default', 'font');
       background-color: map-get($value, 'default', 'background');
       border-color: map-get($value, 'default', 'border');
-      @if (map-get($value, 'default', 'shadow') != null) {
+      @if map-get($value, 'default', 'shadow') != null {
         box-shadow: map-get($value, 'default', 'shadow');
       }
       // 아이콘이 존재한다면
@@ -65,7 +65,7 @@
         color: map-get($value, 'focus', 'font');
         background-color: map-get($value, 'focus', 'background');
         border-color: map-get($value, 'focus', 'border');
-        @if (map-get($value, 'focus', 'shadow') != null) {
+        @if map-get($value, 'focus', 'shadow') != null {
           box-shadow: map-get($value, 'focus', 'shadow');
         }
         .#{$common-prefix}icon {
@@ -77,7 +77,7 @@
         color: map-get($value, 'hover', 'font');
         background-color: map-get($value, 'hover', 'background');
         border-color: map-get($value, 'hover', 'border');
-        @if (map-get($value, 'hover', 'shadow') != null) {
+        @if map-get($value, 'hover', 'shadow') != null {
           box-shadow: map-get($value, 'hover', 'shadow');
         }
         .#{$common-prefix}icon {
@@ -85,19 +85,16 @@
         }
       }
 
-      &:not(:disabled),
-      &:not(.disabled) {
-        &:active,
-        &.active {
-          color: map-get($value, 'active', 'font');
-          background-color: map-get($value, 'active', 'background');
-          border-color: map-get($value, 'active', 'border');
-          @if (map-get($value, 'active', 'shadow') != null) {
-            box-shadow: map-get($value, 'active', 'shadow');
-          }
-          .#{$common-prefix}icon {
-            background: map-get($value, 'active', 'font');
-          }
+      &:enabled:active,
+      &:enabled.active {
+        color: map-get($value, 'active', 'font');
+        background-color: map-get($value, 'active', 'background');
+        border-color: map-get($value, 'active', 'border');
+        @if map-get($value, 'active', 'shadow') != null {
+          box-shadow: map-get($value, 'active', 'shadow');
+        }
+        .#{$common-prefix}icon {
+          background: map-get($value, 'active', 'font');
         }
       }
 
@@ -106,7 +103,7 @@
         color: map-get($value, 'disabled', 'font');
         background-color: map-get($value, 'disabled', 'background');
         border-color: map-get($value, 'disabled', 'border');
-        @if (map-get($value, 'disabled', 'shadow') != null) {
+        @if map-get($value, 'disabled', 'shadow') != null {
           box-shadow: map-get($value, 'disabled', 'shadow');
         }
         .#{$common-prefix}icon {
