--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -12,7 +12,7 @@
     <div class="portal-container flex-row">
         <div class="login-background">
             <img class="login-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
-            <a href="/portals/main" class="btn login-return float-right" th:text="#{common.btn.return}"></a>
+            <a href="/portals/main" class="z-button login-return float-right" th:text="#{common.btn.return}"></a>
             <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
         </div>
         <div class="login-form">
@@ -28,12 +28,12 @@
                     <label tabindex="-1" th:text="#{user.label.password}"></label>
                     <input type="password" id="upasswd" name="upasswd" class="z-input" maxlength="100" required="required">
                 </div>
-                <button class="point-fill login-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
+                <button class="z-button primary col-pct-12" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
             </div>
             <div class="login-divide flex-row align-items-center" th:text="#{login.label.or}"></div>
             <div class="login-platform">
-                <button class="login-google icon-google" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
-                <button class="login-kakao icon-kakao" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <button class="z-button google col-pct-12" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <button class="z-button kakao col-pct-12" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
             </div>
             <div class="login-other flex-row justify-content-center align-items-center">
                 <div class="login-other-signUp"><a href="/certification/signup" th:text="#{login.label.signupNote}"></a></div>
